# strguard

./: .gitignore  README.md  README.zh-CN.md  build.gradle.kts  deny.toml  settings.gradle.kts
.github/scripts/: create-tampered-apk.py  verify-reproducible.sh  verify-rust-performance.sh
.github/workflows/: android-device-farm.yml  ci.yml  release.yml
docs/: strguard-2-threat-model.md
gradle/: verification-metadata.xml
gradle/wrapper/: gradle-wrapper.properties
native/: .gitignore
native/strguard-runtime/: Cargo.toml  build.rs
native/strguard-runtime/src/: lib.rs
samples/: README.md
samples/android-application/: build.gradle.kts  settings.gradle.kts
samples/android-application/src/main/: AndroidManifest.xml
samples/android-library/: build.gradle.kts  settings.gradle.kts
samples/application/: build.gradle.kts  settings.gradle.kts
samples/application/src/main/java/sample/application/: Main.java
samples/java/: build.gradle.kts  settings.gradle.kts
samples/java-library/: build.gradle.kts  settings.gradle.kts
samples/java/src/main/java/sample/java/: ProtectedMessage.java
samples/kotlin-android-application/: build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
samples/kotlin-jvm/: build.gradle.kts  settings.gradle.kts
samples/kotlin-jvm/src/main/kotlin/sample/kotlin/: Main.kt
samples/kotlin-multiplatform/: build.gradle.kts  settings.gradle.kts
samples/kotlin-multiplatform/src/commonMain/kotlin/sample/multiplatform/: Greeting.kt
strguard-api/: build.gradle.kts
strguard-plugin/: build.gradle.kts  gradle.lockfile
(+92 files in other folders)
